--- a/app/scss/utilities/_variables.scss
+++ b/app/scss/utilities/_variables.scss
@@ -1,52 +1,54 @@
 /// @author Sohail Hasware
-/// Font icons
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
-@import url(https://fonts.googleapis.com/css?family=Merriweather+Sans);
-@import url(http://fonts.googleapis.com/css?family=Poiret+One);
+/// Fonts
+@import url('https://fonts.googleapis.com/css?family=Barlow|Indie+Flower|Spectral+SC');
+
 /// Text setup
 $text: (
-  body: unquote("'Merriweather', serif"),
+  body: ('Barlow', sans-serif),
   body-weight: 400,
-  headline: unquote("'Oswald', 'Helvetica Neue', Arial, sans-serif"),
-  headline-weight: 400,
+  headline: ('Spectral SC', serif),
+  headline-weight: 600,
+  cite: ('Indie Flower', cursive),
+  cite-weight: 400,
 ) !default;
 
 
 /// COLORS map
 $color: (
-  main: #24d4a0,
-  accent1: #ffd166,
-  accent2: #ec4970,
-  accent3: #1d8aaf,
-  accent4: #0a3a4a,
-  dark: #282828,
-  gray: #e1e1e1,
-  darkgrey: #666,
-  bright: #f5f5f5
+  main: #EFECCA,
+  accent1: #F1BB87,
+  accent2: #F78E69,
+  accent3: #5D675B,
+  accent4: #B6D7B9,
+  accent5: #102542,
+
+  dark: #000000,
+  bright: #FFFFFF
 ) !default;
 
 
 /// Color def map for page-layout using color map
 $color-defs: (
-  header: map-get($color, bright),
-  header-text: map-get($color, dark),
-  footer: map-get($color, dark),
+  header: map-get($color, accent5),
+  header-text: map-get($color, bright),
+
+  footer: map-get($color, accent5),
   footer-text: map-get($color, bright),
+
   text: map-get($color, dark),
-  button-default: map-get($color, main),
+
+  button-default: map-get($color, accent4),
   button-default-text: map-get($color, bright),
-  input-field: transparentize(map-get($color, bright), .95),
-  input-field-text: map-get($color, bright),
+
+  input-field: map-get($color, bright),
+  input-field-text: map-get($color, dark),
 ) !default;
 
 
 /// Breakpoint map
-
 $breakpoints: (
   'small':  ( min-width:  40.000em ),
-  'medium': ( min-width:  48.000em ),
   'large':  ( min-width: 62.000em ),
-  'wide':  ( min-width: 75.000em )
 ) !default;
 
 
