--- a/app/scss/modules/_footer.scss
+++ b/app/scss/modules/_footer.scss
@@ -1,5 +1,4 @@
 footer {
-
     /* The roof on the footer */
     .footer-top {
         width: 100%;
@@ -20,19 +19,49 @@ footer {
         }
     }
 
+    /* The footer content */
     .base {
         background: map-get($color-defs, footer);
         color: map-get($color-defs, footer-text);
         text-align: center;
-        
+
+        /* Headline */
         h2 {
             margin: 0;
         }
 
+        /* Contact */
         p {
             margin: 0;
         }
 
+        /* Site navigation */
+        ul {
+            margin-top: 2em;
+            display: grid;
+            grid-gap: 1em;
+            grid-template: 1fr 1fr / 1fr 1fr;
+
+            /* Desktop version */
+            @include respond-to("large") {
+                grid-template: 1fr / 1fr repeat(4, 200px) 1fr;
+
+                li:nth-child(1) {
+                    grid-column: 2 / 3;
+                }
+                li:nth-child(2) {
+                    grid-column: 3 / 4;
+                }
+                li:nth-child(3) {
+                    grid-column: 4 / 5;
+                }
+                li:nth-child(4) {
+                    grid-column: 5 / 6;
+                }
+            }
+        }
+
+        /* Social icons */
         .fa {
             padding: 0.5em;
             font-size: 3em;
