Louis settings + footer correction + start of register page

--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -12,9 +12,10 @@ html {
 
 // set upp body color
 body {
-    color: map-get($color, bright);
-    background: map-get($color, accent1);
+    color: map-get($color-defs, text);
+    background: map-get($color-defs, body);
     font-family: map-get($text, body);
+    font-weight: map-get($text, body-weight);
     font-size: map-get($text, body-size);
 }
 
@@ -27,9 +28,27 @@ img {
     height: auto;
 }
 
+h1 {
+    color: map-get($color, dark);
+    font-family: map-get($text, cite);
+    font-weight: map-get($text, cite-weight);
+    font-size: map-get($text, cite-size-big);
+}
+
 h2 {
     font-family: map-get($text, headline);
+    font-weight: map-get($text, headline-weight);
     font-size: map-get($text, headline-size);
+    /* Desktop version */
+    @include respond-to("small") {
+        font-size: map-get($text, headline-size-big);
+    }
+}
+
+.cite {
+    font-family: map-get($text, cite);
+    font-weight: map-get($text, cite-weight);
+    font-size: map-get($text, cite-size);
 }
 
 ul {
