--- a/app/scss/modules/_page_register.scss
+++ b/app/scss/modules/_page_register.scss
@@ -1,11 +1,120 @@
 #register {
     .register-top {
-        img, p {
+        img,
+        p {
             display: none;
+        }
+
+        /* Desktop version */
+        @include respond-to("large") {
+            width: 80vw;
+            margin: 0 auto 2em;
+
+            img {
+                display: inline-block;
+                margin-right: 1em;
+                width: 600px;
+                float: left;
+            }
+
+            h1 {
+                text-align: left;
+            }
+
+            p {
+                display: inline;
+            }
+        }
+    }
+
+    form {
+        display: grid;
+        justify-items: center;
+        grid-template: repeat(4, 1fr) 2fr / 1fr;        
+        #firstname {
+            grid-row: 1 / 2;
+            grid-column: 1 / 2;
+        }
+
+        #lastname {
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+        }
+
+        #telephone {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+        }
+
+        #email {
+            grid-row: 4 / 5;
+            grid-column: 1 / 2;
+        }
+        button {
+            grid-row: 5 / 7;
+            grid-column: 1 / 2;
+        }
+
+        /* Desktop version */
+        @include respond-to("large") {
+            grid-template: 1fr 1fr 2fr / 1fr repeat(2, 400px) 1fr;
+
+            #firstname {
+                grid-row: 1 / 2;
+                grid-column: 2 / 3;
+            }
+
+            #lastname {
+                grid-row: 1 / 2;
+                grid-column: 3 / 4;
+            }
+
+            #telephone {
+                grid-row: 2 / 3;
+                grid-column: 2 / 3;
+            }
+
+            #email {
+                grid-row: 2 / 3;
+                grid-column: 3 / 4;
+            }
+            button {
+                grid-row: 3 / 4;
+                grid-column: 2 / 4;
+            }
         }
     }
 
     .cite-collection {
         display: none;
+
+        /* Desktop version */
+        @include respond-to("large") {
+            display: grid;
+            grid-template: repeat(2, 1fr) 1.5fr / 1fr 1fr;
+
+            .cite {
+                text-align: center;
+
+                &:nth-child(1) {
+                    grid-row: 2 / 3;
+                    grid-column: 1 / 2;
+                    justify-self: right;
+                    width: 400px;
+                }
+                &:nth-child(2) {
+                    grid-row: 1 / 3;
+                    grid-column: 2 / 3;
+                    justify-self: left;
+                    width: 500px;
+                }
+                &:nth-child(3) {
+                    grid-row: 3 / 4;
+                    grid-column: 1 / 3;
+                    justify-self: center;
+                    width: 900px;
+                }
+            }
+        }
     }
 }
