--- a/app/scss/utilities/_helpers.scss
+++ b/app/scss/utilities/_helpers.scss
@@ -2,13 +2,13 @@
 
 /// Button placeholder
 %btn {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    color: white;
-    text-decoration: none;
-    padding: 5%;
-    margin: 10px;
-    font-family: "Poiret One", cursive;
-    font-size: 1.5em;
+    background: map-get($color-defs, button-default);
+    color: map-get($color-defs, button-default-text);
+    font-family: map-get($text, headline);
+    box-shadow: 5px 5px 10px map-get($color, dark);
+    width: 250px;
+    height: 80px;
+    border-radius: 2em;
+    border-style: none;
+    margin-top: 1em;
 }
