--- a/app/scss/modules/_landingpage.scss
+++ b/app/scss/modules/_landingpage.scss
@@ -1,3 +1,4 @@
+/* Welcome to the page */
 .introduction {
     display: flex;
     flex-direction: column;
@@ -13,15 +14,13 @@
     img {
         filter: sepia(50%);
     }
-
     /* Desktop version */
     @include respond-to("large") {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 16px;
-        max-width: 45em;
+        max-width: 70%;
         margin: 0 auto;
-
         h1 {
             grid-row: 1;
             grid-column: 2;
@@ -43,13 +42,30 @@
         }
         img {
             grid-row: 1/4;
-            grid-column: 1; 
+            grid-column: 1;
         }
     }
 }
 
+/* Available rentals*/
 .offers {
     text-align: center;
+    color: black;
+    .category {
+        text-align: left;
+        max-width: 90vw;
+        margin: 0 auto;
+        h3 {
+            margin: 0;
+        }
+        svg {
+            margin-bottom: 5%;
+            line {
+                stroke: black;
+                stroke-width: 1px;
+            }
+        }
+    }
     .rent-card {
         display: grid;
         grid-template-rows: 1fr 1fr;
@@ -66,9 +82,35 @@
             align-self: flex-end;
             margin: 0;
         }
+        .card-info {
+            display: none;
+        }
     }
     /* Desktop version */
     @include respond-to("large") {
-        
+        .container {
+            display: grid;
+            grid-template: 1fr / 1fr 1fr 1fr;
+            grid-gap: 1em;
+            max-width: 90vw;
+            margin: 0 auto;
+            .rent-card:hover {
+                box-shadow: 5px 5px 10px black;
+            }
+            .rent-card:nth-child(1) {
+                grid-column: 1 /2
+            }
+            .rent-card::nth-child(2) {
+                grid-column: 2/3
+            }
+            .card-info {
+                display: block;
+                color: black;
+            }
+            .card-meta {
+                display: flex;
+                justify-content: space-around;
+            }
+        }
     }
 }
