--- a/app/scss/utilities/_mixins.scss
+++ b/app/scss/utilities/_mixins.scss
@@ -15,3 +15,15 @@
     }
 }
 
+///Mixin for page background
+/// @param {url} $imagepath - set the url of the page-bg
+@mixin page-bg($imagepath,$bgrepeat:no-repeat,$bgattachment:fixed,$bgsize:cover) {
+	
+		color: map-get($color, bright);
+  		background: map-get($color, accent1);
+        background-image: url($imagepath);
+        background-repeat: $bgrepeat;
+		background-attachment:$bgattachment;
+		background-size:$bgsize;
+    
+	}
