Edited readme, prototyp, gulpfile + comments

--- a/app/scss/modules/_form.scss
+++ b/app/scss/modules/_form.scss
@@ -4,6 +4,7 @@
     border: 5px solid map-get($color, bright);
     text-align: center;
 
+    /* Input fields */
     input[type="text"] {
         width: 250px;
         padding: 0.3em;
